# cacao_shsongpu

./: README.md  setup.py
AOloopControl/: AOloopControl.c  CMakeLists.txt  modalfilter.c  modalstatsTUI.c  zonalfilter.c  zonalfilter.h
AOloopControl/examples/ARTAO-shs-loop-conf/: README.md  aorun-000-launchCam  aorun-000-launchDM  cacaovars.bash  fpssetup.setval.conf  tasklist.txt
AOloopControl/examples/KalAO-ttmloop-conf/: README.md
AOloopControl/examples/MAPS-vispyr-conf/: ObsRunNotes.md  SimpleStartup.md  cacaovars.bash  fpssetup.setval.conf
AOloopControl/examples/ao3k-apd188-conf/: cacaovars.bash
AOloopControl/examples/ao3k-apd3k-conf/: cacaovars.bash  fpssetup.setval.conf
AOloopControl/examples/ao3k-bimdm3kpt-conf/: cacaovars.bash  (+1 more)
AOloopControl/scripts/: cacao-calib-archive  cacao-calib-streamload  cacao-check-cacaovars  cacao-commands  cacao-fpsctrl  cacao-fpsctrl-TUI  cacao-fpsctrl-log  cacao-fpsctrl-logprocess  cacao-fpslistadd  cacao-fpslistadd-ACQLINCMRM  cacao-fpslistadd-ACQWFS  cacao-fpslistadd-MAPWFS  cacao-fpslistadd-MODALFILTERING  cacao-fpslistadd-MVMGPU_CMODEVAL2DM  cacao-fpslistadd-MVMGPU_CMODEVALOFFLOAD2DM  cacao-fpslistadd-MVMGPU_DM2CMODEVAL  cacao-fpslistadd-MVMGPU_DM2MVAL  cacao-fpslistadd-MVMGPU_WFS2CMODEVAL  cacao-fpslistadd-OLMODEVAL2DM  cacao-fpslistadd-SIMMVMGPU  cacao-fpslistadd-WFSCAMSIM  cacao-fpslistadd-WFSMODEVAL2DM  cacao-fpslistadd-ZONALFILTERING  cacao-log  cacao-loops  cacao-modalstatsTUI  cacao-msglogCTRL  cacao-setDMnolink  cacao-setup  cacao-task-manager  cacaofuncs-log
AOloopControl_DM/: AOloopControl_DM_comb.c  DMturbulence.c  mk3Ddmgrid.c
AOloopControl_DM/scripts/: cacao-fpslistadd-DMATMTURB  cacao-fpslistadd-DMCH2DISP  cacao-fpslistadd-DMCH2DISPSIM  cacao-fpslistadd-DMSIMDELAY
AOloopControl_IOtools/: AOloopControl_IOtools.c  CMakeLists.txt  Testmodule.c  Testmodule.h  WFScamsim.c  WFSmap.c  acquireWFSim.c  acquireWFSspec.c  acquireWFSspec.h  ao188_preprocessor.c  findspots.c
AOloopControl_IOtools/scripts/: cacao-avg-stream  cacao-fpslistadd-AVG_STREAM  cacao-fpslistadd-LOG_STREAM  cacao-fpslistadd-RESHAPE_1D_PUPIL  cacao-fpslistadd-RSHP_SHS_GPU_GRAD  cacao-fpslistadd-RSHP_SHS_GPU_INT  cacao-fpslistadd-RSHP_SHS_GPU_WF  cacao-fpslistadd-SHSONGPU_EVAL  cacao-fpslistadd-SHSONGPU_REF  cacao-setup-gpu-eval-fps  cacao-setup-logging-fps  cacao-setup-reshape-fps  cacao-setup-shs-gpu-ref-fps  cacao-shs-gpu-eval  cacao-shs-gpu-ref  cacao-shs-on-gpu
AOloopControl_IOtools/scripts/specifications/: cacao-fpslistadd-AVG_SHSONGPU_SHS  cacao-fpslistadd-LOG_CMODES  cacao-fpslistadd-LOG_SHSONGPU_GRAD  cacao-fpslistadd-LOG_SHSONGPU_INT  cacao-fpslistadd-LOG_SHSONGPU_SHS  cacao-fpslistadd-LOG_SHSONGPU_WF  cacao-fpslistadd-RSHP_ACQWF_AVG  cacao-fpslistadd-RSHP_ACQWF_C  cacao-fpslistadd-RSHP_SHSONGPU_GRAD  cacao-fpslistadd-RSHP_SHSONGPU_INT  cacao-fpslistadd-RSHP_SHSONGPU_WF
AOloopControl_IOtools/shs_on_gpu/: pupil_reshape.c  pupil_reshape.h  pupil_zernike_gen.c  pupil_zernike_gen.h  shs_gpu.c  shs_gpu.h  shs_gpu_ref.c  shs_gpu_ref.h
AOloopControl_IOtools/shs_on_gpu/evaluator/: SGE_CUDAkernel.hpp  SGE_CUDAremoveTilt.hpp  SGE_Evaluator.cu  SGE_Evaluator.hpp  SGE_Evaluator_interface.cpp  SGE_Evaluator_interface.h  SGE_GridLayout.cu  SGE_GridLayout.hpp  SGE_Kernel.hpp  SGE_ReferenceManager.cpp  SGE_ReferenceManager.cu  SGE_ReferenceManager.hpp
AOloopControl_IOtools/shs_on_gpu/pupil_reshaper/: SGE_Reshaper.cpp  SGE_Reshaper.hpp  SGE_Reshaper_interface.cpp  SGE_Reshaper_interface.h
AOloopControl_IOtools/shs_on_gpu/pupil_zern_generator/: PupilZernikeGenerator.cpp  PupilZernikeGenerator.hpp  PupilZernikeGenerator_interface.cpp  PupilZernikeGenerator_interface.h
AOloopControl_IOtools/shs_on_gpu/ref_recorder/: SGR_ImageHandler.cpp  SGR_ImageHandler.hpp  SGR_ImageHandlerBase.cpp  SGR_ImageHandlerBase.cu  SGR_ImageHandlerBase.hpp  SGR_Recorder.cpp  SGR_Recorder.cu  SGR_Recorder.hpp  SGR_Recorder_interface.cpp  SGR_Recorder_interface.h  SGR_ReferenceKW.hpp
AOloopControl_IOtools/shs_on_gpu/util/: Circle.cpp  Circle.hpp  CudaSGEutil.hpp  CudaUtil.hpp  GaussianKernel.cu  GaussianKernel.hpp  ImageHandler.hpp  ImageHandler2D.hpp  ImageHandler2DBase.cu  ImageHandler2DBase.hpp  ImageHandlerBase.cu  ImageHandlerBase.hpp  OneDGaussianFit.cpp  OneDGaussianFit.hpp  Point.hpp  Pupil.cpp  Pupil.hpp  Rectangle.hpp  SpotFitter.cpp  SpotFitter.hpp  atypeUtil.hpp
AOloopControl_IOtools/shs_on_gpu/wf_reconstructor/: modalwfreconstructor.cpp  modalwfreconstructor.hpp  modalwfreconstructorbuilder.cpp  modalwfreconstructorbuilder.hpp
AOloopControl_IOtools/shs_on_gpu/wf_reconstructor/subclasses/: pupil.cpp  pupil.hpp  wavefront.cpp  wavefront.hpp  wfglocalresponsegenerator.cpp  wfglocalresponsegenerator.hpp  wfgrad.cpp  wfgrad.hpp  wfgradmodegenerator.cpp  wfgradmodegenerator.hpp  wfresponsesampler.cpp  wfresponsesampler.hpp
AOloopControl_PredictiveControl/scripts/: cacao-fpslistadd-MKPF
AOloopControl_acquireCalib/: AOloopControl_acquireCalib.c  CMakeLists.txt  acquireWFSlincalib.c  makeSimpleZonalPokeModes.c  makeSimpleZonalPokeModes.h  measure_linear_resp.c
AOloopControl_acquireCalib/scripts/: cacao-fpslistadd-MEASURELINRESP  cacao-mkDMpokemodes
AOloopControl_compTools/: AOloopControl_compTools.c
AOloopControl_perfTest/: AOloopControl_perfTest.c  CMakeLists.txt  mlat.c  mlatSlowDM.c  mlatSlowDM.h  mlat_decode.c  mlat_decode.h
AOloopControl_perfTest/mlatSlowRecorder/: MLS_DMmanager.cpp  MLS_DMmanager.hpp  MLS_PokePattern.hpp  MLS_Recorder.cpp  MLS_Recorder.hpp  MLS_Recorder_interface.cpp  MLS_Recorder_interface.h  MLS_ResultManager.cpp  MLS_ResultManager.hpp  MLS_SequenceManager.cpp  MLS_SequenceManager.hpp
AOloopControl_perfTest/scripts/: cacao-fpslistadd-MLAT  cacao-fpslistadd-MLAT_SLOWDM
computeCalib/: AOloopControl_computeCalib_loDMmodes.c  AOloopControl_computeCalib_processRM.c  CMakeLists.txt  actmap_sample2D.c  compute_masksWFSDM.c  compute_straight_CM.c  generateRMWFS.c  maskextrapolate.c  modes_spatial_extrapolate.c
pycacao/calib/: compute_straight_CM.py  rmdecode.py
pycacao/dm_tools/: actu_slaving.py  mk_188_map.py
(+98 files in other folders)
